[gd_scene load_steps=3 format=3 uid="uid://bpwrf0t0d85j6"]

[ext_resource type="Script" path="res://English/editor/2/Main.gd" id="1"]
[ext_resource type="Theme" uid="uid://ixlc2xbw33u3" path="res://English/editor/1/theme.tres" id="2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="Button Open" type="Button" parent="Container/Menu"]
layout_mode = 2
text = "Open"

[node name="FileDialogOpen" type="FileDialog" parent="Container/Menu/Button Open"]
access = 2
show_hidden_files = true

[node name="Button Save" type="Button" parent="Container/Menu"]
layout_mode = 2
text = "Save"

[node name="Button Save As" type="Button" parent="Container/Menu"]
layout_mode = 2
text = "Save As"

[node name="FileDialogSave" type="FileDialog" parent="Container/Menu/Button Save As"]
access = 2
show_hidden_files = true

[node name="Editor" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="Button Find" type="Button" parent="Container/Editor"]
layout_mode = 2
text = "Find"

[node name="LineEdit" type="LineEdit" parent="Container/Editor"]
layout_mode = 2

[node name="Button Menu" type="MenuButton" parent="Container/Editor"]
layout_mode = 2
text = "Type"

[node name="Button Push" type="Button" parent="Container/Editor"]
layout_mode = 2
text = "push"

[node name="Content" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="Container/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true
auto_height = true
same_column_width = true

[node name="Content_f" type="ScrollContainer" parent="Container"]
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Container/Content_f"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Alert" type="AcceptDialog" parent="."]

[connection signal="pressed" from="Container/Menu/Button Open" to="." method="_on_Button_Open_pressed"]
[connection signal="file_selected" from="Container/Menu/Button Open/FileDialogOpen" to="." method="_on_FileDialogOpen_file_selected"]
[connection signal="pressed" from="Container/Menu/Button Save" to="." method="_on_Button_Save_pressed"]
[connection signal="pressed" from="Container/Menu/Button Save As" to="." method="_on_Button_Save_As_pressed"]
[connection signal="file_selected" from="Container/Menu/Button Save As/FileDialogSave" to="." method="_on_FileDialogSave_file_selected"]
[connection signal="pressed" from="Container/Editor/Button Find" to="." method="_on_Button_Find_pressed"]
[connection signal="pressed" from="Container/Editor/Button Push" to="." method="_on_Button_Push_pressed"]
[connection signal="item_activated" from="Container/Content/ItemList" to="." method="_on_ItemList_item_activated"]
